// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessPage should match a snapshot when submitCompleteFormState is PENDING 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerResponsive
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <div>
        <H3>
          Ms
           
          Saoirse
           
          Chadwick
        </H3>
      </div>
      <div>
        <h4>
          RPS Reference: 
          MKC16000098
        </h4>
      </div>
    </div>
    <div
      className="flex"
    >
      <div>
        <div>
          <span>
            <FaCheck />
          </span>
          <p>
            Thank you for submitting this information, we are in the process of checking the details and will come back to you shortly. Please click on the following button to complete this submission.
          </p>
        </div>
        <Button
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Complete Submission
        </Button>
      </div>
      <div>
        <ul>
          <li>
            Name: 
            Ms
             
            Saoirse
          </li>
          <li>
            Address: 
             
            Tilbrook Farm
            , 
            Station Road
            , 
            Bow Brickhill
            , 
            Milton Keynes
          </li>
          <li>
            ID: Passport & Driving Licence
          </li>
          <li>
            Address Information: 3 years 4 months
          </li>
          <li>
            Agent Complete: completed
          </li>
        </ul>
      </div>
    </div>
  </FlexContainerResponsive>
</Connect(ErrorBoundary)>
`;

exports[`SuccessPage should match a snapshot when submitCompleteFormState is SUBMITTING 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerResponsive
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <div>
        <H3>
          Ms
           
          Saoirse
           
          Chadwick
        </H3>
      </div>
      <div>
        <h4>
          RPS Reference: 
          MKC16000098
        </h4>
      </div>
    </div>
    <div
      className="flex"
    >
      <div>
        <div>
          <span>
            <FaCheck />
          </span>
          <p>
            Thank you for submitting this information, we are in the process of checking the details and will come back to you shortly. Please click on the following button to complete this submission.
          </p>
        </div>
        <Button
          loading={true}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Complete Submission
        </Button>
      </div>
      <div>
        <ul>
          <li>
            Name: 
            Ms
             
            Saoirse
          </li>
          <li>
            Address: 
             
            Tilbrook Farm
            , 
            Station Road
            , 
            Bow Brickhill
            , 
            Milton Keynes
          </li>
          <li>
            ID: Passport & Driving Licence
          </li>
          <li>
            Address Information: 3 years 4 months
          </li>
          <li>
            Agent Complete: completed
          </li>
        </ul>
      </div>
    </div>
  </FlexContainerResponsive>
</Connect(ErrorBoundary)>
`;

exports[`SuccessPage should match a snapshot when submitCompleteFormState is SUCCESS 1`] = `
<Redirect
  to="/results"
/>
`;
